--- a/public/front/css/theme.css
+++ b/public/front/css/theme.css
@@ -1,5 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Crimson Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+
+
 
 	html, body{width:100%;max-width:100%;height:auto;padding:0;margin:0;-webkit-font-smoothing:antialiased;scroll-behavior:unset!important;}
 	body{overflow-x:hidden!important;overflow-y:scroll;-webkit-tap-highlight-color:rgba(0,0,0,0.3);font-style:normal;font-weight:400;font-size:16px;font-family:'Roboto', sans-serif;line-height:24px;letter-spacing:0px;color:#464646;}
@@ -15,8 +17,8 @@
 	*{border:0;vertical-align:baseline;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 	*, *:hover, *:focus{outline:none!important;}
 
-	.font-main{font-family:'Poppins', sans-serif !important;}
-	.font-secondary{font-family:'Poppins', serif;}
+	.font-main{font-family:'Crimson Pro', sans-serif !important;}
+	.font-secondary{font-family:'Crimson Pro', serif;}
 	/* Styles */
 	.italic{font-style:italic;}
 	.uppercase{text-transform:uppercase;}
