--- a/public/front/css/theme.css
+++ b/public/front/css/theme.css
@@ -748,7 +748,7 @@
 /* Label Animations */
 	.label-animation{position:relative;}
 	.label-animation label{position:absolute;width:100%;height:100%;left:0;font-size:inherit;top:0;color:#A6A6A6;user-select:none;pointer-events:none;backface-visibility:hidden;}
-	.label-animation .input{margin:0!important;color:transparent !important;-webkit-transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1), color 1s cubic-bezier(0.77, 0, 0.2, 1), border 0.6s cubic-bezier(0.77, 0, 0.2, 1) 0.2s;transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1), color 1s cubic-bezier(0.77, 0, 0.2, 1), border 0.6s cubic-bezier(0.77, 0, 0.2, 1) 0.2s;}
+	.label-animation .input{margin:0!important;-webkit-transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1), color 1s cubic-bezier(0.77, 0, 0.2, 1), border 0.6s cubic-bezier(0.77, 0, 0.2, 1) 0.2s;transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1), color 1s cubic-bezier(0.77, 0, 0.2, 1), border 0.6s cubic-bezier(0.77, 0, 0.2, 1) 0.2s;}
 	.label-animation label span{position:absolute;left:22px;top:50%;line-height:10px;backface-visibility:hidden;-webkit-transform:translate(0%,-50%);-ms-transform:translate(0%,-50%);transform:translate(0%,-50%);-webkit-transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1);transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1);}
 	.label-animation.textarea-wrapper label span{top:35px;-webkit-transform:translate(0%,-50%);-ms-transform:translate(0%,-50%);transform:translate(0%,-50%);-webkit-transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1);transition:all 0.6s cubic-bezier(0.77, 0, 0.2, 1);}
 	/* Focused label > span */
